# Widget_3

./: .gitignore  CMakeLists.txt  area.cpp  area.h  figure.cpp  figure.h  main.cpp  widget.cpp  widget.h
